<resources>
    <string name="app_name">Healer Meta</string>
    <string name="this_is_null">这里空空如也~</string>
    <string name="home">首页</string>
    <string name="bazaar">寄售</string>
    <string name="my">我的</string>
    <string name="stadium">场馆</string>
    <string name="not_login">未登录</string>
    <string name="login_read_you_digital_collection">登录后可查看你的数字藏品</string>
    <string name="my_order">我的订单</string>
    <string name="official_accounts">公众号</string>
    <string name="invite_friends">邀请好友</string>
    <string name="examples_record">转赠记录</string>
    <string name="lottery_assistant">抽奖助手</string>
    <string name="my_wallet">我的钱包</string>
    <string name="compound">合成</string>
    <string name="my_collection">我的藏品</string>
    <string name="login_immediately">立即登录</string>
    <string name="gain_message_code">获取验证码</string>
    <string name="input_phone_number">输入手机号</string>
    <string name="message_code">短信验证码</string>
    <string name="second_s">%ss</string>
    <string name="not_account_go">未有账号？去</string>
    <string name="have_account_go">已有账号？去</string>
    <string name="register">注册</string>
    <string name="my_have_read_and_sure">我已阅读并同意</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="and">和</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="login">登录</string>
    <string name="please_input_sure_phone_number">请输入正确手机号码</string>
    <string name="please_input_message_code">请输入正确验证码</string>
    <string name="please_agree_user_agreement">请认真阅读并且同意《用户协议》和《隐私政策》</string>
    <string name="please_agree_user_other_pay_agreement">请认真阅读并且同意《首易信支付用户协议》</string>
    <string name="input_invite_code">输入邀请码</string>
    <string name="bazaar_not_open">寄售暂未放开</string>
    <string name="accounts_and_security">账号与安全</string>
    <string name="contact_the_customer_service">联系客服</string>
    <string name="real_name_authentication">实名认证</string>
    <string name="setting_pay_password">设置支付密码</string>
    <string name="bank_card">银行卡</string>
    <string name="not_authentication">未认证</string>
    <string name="authentication">已认证</string>
    <string name="head">头像</string>
    <string name="nickname">昵称</string>
    <string name="phone_number">手机号</string>
    <string name="exit_login">退出登录</string>
    <string name="set_payment_password_please_six_password">支付密码，请输入6位数字</string>
    <string name="send_message_code">发送验证码</string>
    <string name="please_input_phone_code">请输入手机验证码</string>
    <string name="commit">提交</string>
    <string name="please_six_length_password">请输入6位数字密码</string>
    <string name="add_my_bank_card">添加本人的储蓄卡</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="add_bank_card_keep">成功绑定银行卡后不能修改\t\t银行卡绑定手机默认为您注册手机号</string>
    <string name="bank_card_number">银行卡号</string>
    <string name="please_input_bank_card_number">请输入银行卡号</string>
    <string name="not_support_bank_have_this">暂不支持农业、兴业、招商银行</string>
    <string name="bank_reserves_mobile_number">银行预留手机号</string>
    <string name="verification_code">验证码</string>
    <string name="binding">绑定</string>
    <string name="agree">同意</string>
    <string name="shou_xin_pay_user_agreement">《首易信支付用户协议》</string>
    <string name="please_input_succeed_bank_number">请输入正确银行卡号</string>
    <string name="this_collection_support_phone_number_give">此藏品仅支持手机号转赠</string>
    <string name="receiver_people">接收人</string>
    <string name="please_input_receiver_people_phone_number">请填写接收人的手机号</string>
    <string name="traders_password">交易密码</string>
    <string name="please_input_payment_password">请输入交易密码</string>
    <string name="sure_give">确认转赠</string>
    <string name="my_have_read_it_carefully_and_agree">我已仔细阅读、明白并同意下列警示：</string>
    <string name="give_collection_ruled">1.本藏品只支持手机号转赠。\n2.如果填写的接收人手机号未在Healer Meta注册，将无法转赠。\n3.请慎重确认接收人手机号正确性，Healer Meta对不准确信息、错误或损害概不负责;\n4.一旦发生转赠操作将无法撤销，且转赠成功后，与数字藏品相关的权利将全部转移至受赠人;\n5.转赠为用户个人行为，请勿对数字藏品进行炒作、场外交易、欺诈等行为，转赠过程中发生资产损失或损害的，Healer Meta不承担任何责任。</string>
    <string name="real_name_authentication_hint">根据国家相关政策法律规定，先完成身份证验证可进行下一步</string>
    <string name="id_card_name">身份证姓名</string>
    <string name="input_name">输入姓名</string>
    <string name="input_15_to_18_id_card">输入15&#045;18位身份证号</string>
    <string name="real_name_authentication_purpose">身份证信息仅做验证，不用作其它用途</string>
    <string name="id_card_digits">0123456789Xx</string>
    <string name="please_inout_name">请输入姓名</string>
    <string name="please_inout_id_card_number">请输入正确身份证号</string>
    <string name="default_http_error">网络异常~</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="arc_you_sure_exit_login">确当退出登录</string>
    <string name="authentication_information">认证信息</string>
    <string name="owner">拥有者</string>
    <string name="contract_address">合约地址</string>
    <string name="chain_logo">链上标识</string>
    <string name="work_details">作品详情</string>
    <string name="buy_notes">购买须知</string>
    <string name="provide_technical_support">提供技术支持</string>
    <string name="sale">预售</string>
    <string name="limit_number">限量</string>
    <string name="tian_he_lian">天河链</string>
    <string name="ma_yi_lian">蚂蚁链</string>
    <string name="buy_notes_details">数字藏品为虚拟数字商品，而非实物，仅限实名认证为年满14周岁的中国大陆用户购买。数字藏品的版权由发行方或原创者拥有，除另行取得版权拥有者书面同意外，用户不得将数字藏品用于任何商业用途。本商品一经售出，不支持退换。本商品源文件不支持本地下载。请勿对数字藏品进行炒作、场外交易、欺诈、或以任何其他非法方式进行使用。</string>
    <string name="copy_succeed">复制成功</string>
    <string name="buy">购买</string>
    <string name="sold_out">已售罄</string>
    <string name="wait_pay">等待支付</string>
    <string name="wait_pays">待支付</string>
    <string name="shop_details">商品详情</string>
    <string name="deal_with_money">应付金额</string>
    <string name="bank_card_payment">银行卡支付</string>
    <string name="buy_way_have">购买途径:</string>
    <string name="buy_model_have">支付方式:</string>
    <string name="market_push">市场发行</string>
    <string name="cancel_order">取消订单</string>
    <string name="continue_buy">继续购买</string>
    <string name="return_to_personal_center">返回个人中心</string>
    <string name="order_commit_timer_down">订单已提交,请在%1$s分钟%2$s秒内完成支付</string>
    <string name="order_number_is">订单号：%1$s</string>
    <string name="collection_token_is">#%1$s</string>
    <string name="create_time_is">创建时间：%1$s</string>
    <string name="pay_money">￥%1$s</string>
    <string name="pay_way">支付方式</string>
    <string name="pay_now">立即支付</string>
    <string name="account_paid">已付款</string>
    <string name="good_shave_been_released">藏品已发放</string>
    <string name="order_has_been_cancel">订单已取消</string>
    <string name="cancelled">已取消</string>
    <string name="on_the_march">进行中</string>
    <string name="all">全部</string>
    <string name="long_click_save_picture">长按保持图片到图库</string>
    <string name="save_image_succeed">保存图片成功</string>
    <string name="save_image_fail">保存图片失败</string>
    <string name="real_name_authentication_succeed">实名认证成功</string>
    <string name="buy_details">购买详情</string>
    <string name="set_payment_password_succeed">设置支付密码成功</string>
    <string name="deposit_card">储蓄卡</string>
    <string name="unbind">解除绑定</string>
    <string name="untying_bank_card">解绑银行卡</string>
    <string name="please_inout_payment_password_check_identity">请输入支付密码，以验证身份</string>
    <string name="please_selector_bank_card">请选择银行卡</string>
    <string name="add_bank_card_payment">添加银行卡支付</string>
    <string name="please_selector_pay_way">请选择支付方式</string>
    <string name="are_you_sure_cancel_order">确定取消订单</string>
    <string name="please_inout_message_code">请输入验证码</string>
    <string name="message_code_send_phone_number">短信验证码已发送至</string>
    <string name="cancel_order_succeed">取消订单成功</string>
    <string name="update_now">立即更新</string>
    <string name="download_ing">下载中....</string>
    <string name="download_ing_notify_read">下载中,通知栏查看进度</string>
    <string name="no_collection">暂无藏品</string>
    <string name="give">转赠</string>
    <string name="give_collection_succeed">转赠成功</string>
    <string name="give_record">转赠记录</string>
    <string name="give_type_give">赠送</string>
    <string name="give_type_get">领取</string>
    <string name="format_goods_name">物品名称：%1$s</string>
    <string name="format_goods_code">物品编号：#%1$s</string>
    <string name="format_give_record">赠送记录：%1$s</string>
    <string name="format_get_record">领取记录：%1$s</string>
    <string name="format_give_user">赠送用户：%1$s</string>
    <string name="format_get_user">领取用户：%1$s</string>
    <string name="format_give_time">转赠时间：%1$s</string>
    <string name="serial_number">编号</string>
    <string name="format_collection_total">共%1$s个藏品</string>
    <string name="results_of_frequent_cancellations">频繁取消订单将限制购买（每日上限5次）</string>
    <string name="find_new_version">发现新版本</string>
    <string name="update_content">更新内容：</string>
    <string name="installation_location_applications_require_permissions">安装应用需要打开未知来源权限，是否开启</string>
    <string name="the_function_is_not_available">本功能暂未开放,敬请期待~</string>
    <string name="gain_message_code_succeed">获取验证码成功</string>
    <string name="your_net_wait_off_line">你的网络好像不在线哦~</string>
    <string name="meta_series">元宇宙系列</string>
    <string name="the_amount_of_rmb">金额（元）</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <string name="billing_details">账单明细</string>
    <string name="please_click_back_exit_app">再按一次返回键，退出APP</string>
    <string name="cash_withdrawal_amount">提现金额</string>
    <string name="rmb_symbol">￥</string>
    <string name="please_input_money_must_greater">提现金额需≥30元</string>
    <string name="balance">余额</string>
    <string name="payment_term">收款方式</string>
    <string name="this_meta_collection_compound_plan">本次元宇宙藏品合成计划</string>
    <string name="collection_as_required_s">按照所需藏品：%1$s</string>
    <string name="the_raw_materials_needed_are_not_enough">所需的原材料藏品不够哦~</string>
    <string name="framer">创作者</string>
    <string name="sell">发售</string>
    <string name="circulate">流通</string>
    <string name="price_sort">价格排序</string>
    <string name="part_s">%1$s份</string>
    <string name="been_sold">已售出</string>
    <string name="selling_price">售价</string>
    <string name="top_up_money_rule">充值金额需≥10元</string>
    <string name="top_up_warm_tips_content">* 所有资金均由第三方持牌支付机构进行支付、托管及清算</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="top_up_money">充值金额</string>
    <string name="yuan">（元）</string>
    <string name="please_input_top_up_money">请输入充值金额~</string>
    <string name="top_up_money_must_greater">充值金额必须≥10元</string>
    <string name="top_up_succeed">充值成功，请注意查看钱包余额~</string>
    <string name="balance_s">余额：￥%1$s</string>
    <string name="withdrawal_rule">1 第三方转账手续费1％(最低收取1元)\n2 应第三方支付要求，提现金额最低为30元\n3 提现到账时间：T＋2，节假日顺延\n4 提现账户姓名必须与账户实名信息一致，否则将提现失败，退回到账户余额</string>
    <string name="please_input_withdraw_money">请输入提现金额~</string>
    <string name="insufficient_wallet_balance">钱包余额不足~</string>
    <string name="withdraw_money_must_greater">提现金额必须≥30元~</string>
    <string name="please_selector_withdraw_bank_card">请选择收款银行卡~</string>
    <string name="withdrawal_bank_card">提现银行卡</string>
    <string name="withdrawal_bank_card_succeed_please_look">提现成功，请注意查看银行卡~</string>
    <string name="withdrawal_money_greater_balance">提现金额大于钱包余额</string>
    <string name="expend">支出</string>
    <string name="revenues">收入</string>
    <string name="top_up">充值</string>
    <string name="buy_shop">购买商品</string>
    <string name="selling_market">卖出市场</string>
    <string name="in_the_book">预定中</string>
    <string name="wallet_pay">钱包支付</string>
    <string name="wallet_pay_s">钱包支付：￥%1$s</string>
    <string name="wallet_pay_order">钱包支付订单</string>
    <string name="hit_the_shelf">上架</string>
    <string name="out_of_stock">下架</string>
    <string name="set_transaction_amount">设置交易金额</string>
    <string name="submit_default_consent_agreement">提交默认同意</string>
    <string name="healer_meta_business_rules">《Healer Meta买卖规则》</string>
</resources>